2013-07-12  Murray Stokely  <murray@FreeBSD.org>

	* src/extensions.cpp: Replace custom extractor and mutator with
	  call to existing functions in mutators.cpp and extractors.cpp that
	  can be used for extensions and any other field type.
	* src/extensions.R: Idem
	* vignettes/RProtoBuf/RProtoBuf.Rnw: Document getExtension,
	  setExtension methods.
	* man/Message-class.Rd: Idem
	* src/rprotobuf.h: Remove unused desc argument to
	  extractFieldAsSEXP.
	* src/extractors.cpp: Idem
	* inst/unitTests/runit.extensions.R: Add additional tests for
	  nested enum and message type extensions.

2013-07-11  Murray Stokely  <murray@FreeBSD.org>

	* R/extensions.R: Implement getExtension, setExtension methods.
	* src/extensions.cpp: Implement getExtension, setExtension.
	* R/set.R: Add a TODO noting these functions are undocumented.
	* R/00classes.R: Add setExtension, getExtension extractors for
	  message objects.
	* R/completion.R: Add setExtension, getExtension.
	* NAMESPACE: Add setExtension, getExtension.
	* src/DescriptorPoolLookup.cpp: Add top-level
	  extensions to descriptor pool.
	* src/rprotobuf.h: Add helper function for getting field
	  descriptor objects.
	* src/wrapper_FileDescriptor.cpp: Add support for
	  extensions to getMemberNames and as_list
	* src/lookup.cpp: Add support for looking up extensions.
	* inst/unitTests/runit.extensions.R: Add basic test for the above.

2013-07-10  Murray Stokely  <murray@FreeBSD.org>

	* man/aslist.Rd: Document behavior for enum and file descriptors
	  and be more sparing with \dontrun in examples.
	* man/EnumDescriptor-class.Rd: Be more sparing with \dontrun in
	  examples so we run more test code.
	* man/add.Rd: Idem
	* man/clone.Rd: Idem
	* man/Descriptor-class.Rd: Idem
	* man/FieldDescriptor-class.Rd: Idem
	* man/FileDescriptor-class.Rd: Idem
	* man/is_extension.Rd: Idem
	* man/label.Rd: Idem
	* man/Message-class.Rd: Idem
	* man/number.Rd: Idem
	* man/P.Rd: Idem
	* man/readProtoFiles.Rd: Idem
	* man/type.Rd: Idem